discussion/kv_engine/133990/133990_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

Expose stats_audit for Prometheus

Change-Id: I60d78f36658f8d8e8b445d3a57d31af7707f622e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-09-01 09:13:21.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-09-01 10:57:53.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4094/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:70:10: error: "stats_config.def.h" file not found [clang-diagnostic-error]
#include "stats_config.def.h" // NOLINT(*)
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4094/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:70:10:
error: "stats_config.def.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4094/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29895/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\ep_engine.cc(413): error C2440: "=": cannot convert from "void" to "ENGINE_ERROR_CODE" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29895/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25915/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_engine.cc:413:26:
error: assigning to "ENGINE_ERROR_CODE" from incompatible type "void"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25915/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4427/ : FAILURE

Compile error at [2020-09-01T09:16:10.467Z] ../kv_engine/engines/ep/src/ep_engine.cc:413:26:
error: assigning to "ENGINE_ERROR_CODE" from incompatible type "void"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4427/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5315/ : FAILURE

Compile error at [2020-09-01T09:45:33.950Z] ../kv_engine/engines/ep/src/ep_engine.cc:413:49:
error: void value not ignored as it ought to be
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5315/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5409/ : FAILURE

Compile error at [2020-09-01T10:46:01.019Z] ../kv_engine/engines/ep/src/ep_engine.cc:413:49:
error: void value not ignored as it ought to be
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5409/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5512/ : FAILURE

Compile error at [2020-09-01T09:27:06.515Z] ../kv_engine/engines/ep/src/ep_engine.cc:413:49:
error: void value not ignored as it ought to be
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5512/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13229/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2620/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
